# rops

./: 404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  book.toml  concepts.html  configuration.html  deny.toml  goals.html  index.html  installation.html  introduction.html  print.html  reference.html  rustfmt.toml  searcher-c2a407aa.js  searchindex-19ed9bce.js  searchindex.js  searchindex.json  toc-8068999e.js  toc.html  toc.js  typos.toml
.github/: codecov.yml  (+1 more)
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  cryptography_stack.rs  error.rs  integration_keys.rs  lib.rs  main.rs  run.rs
crates/cli/src/args/: common.rs  core.rs  decrypt.rs  edit.rs  encrypt.rs  input_args.rs  keys.rs  merge_config.rs  misc_args.rs  mod.rs  refresh.rs
crates/cli/src/cli/: common.rs  decrypt.rs  edit.rs  encrypt.rs  keys.rs  mod.rs  refresh.rs
crates/cli/src/config/: core.rs  creation_rule.rs  mod.rs  retrieve.rs
crates/cli/test_bins/mock_editor/: Cargo.toml
crates/cli/test_bins/mock_editor/src/: main.rs
crates/cli/tests/: mod.rs
crates/cli/tests/smoke/: command_utils.rs  config.rs  decryption.rs  editing.rs  encryption.rs  input_selection.rs  keys.rs  mod.rs  refresh.rs  sops_references.rs
crates/lib/: Cargo.toml  build.rs
crates/lib/src/: authorization_tag.rs  base64_utils.rs  base64utils.rs  data_key.rs  encrypted_data.rs  error_handling.rs  initial_value.rs  lib.rs  rng_key.rs  value.rs
crates/lib/src/cipher/: aes256_gcm.rs  core.rs  mod.rs  variant.rs
crates/lib/src/cryptography/: authorization_tag.rs  data_key.rs  encrypted_data.rs  initial_value.rs  mod.rs  nonce.rs  rng_key.rs
crates/lib/src/cryptography/cipher/: aes256_gcm.rs  core.rs  mod.rs  stub_cipher.rs
crates/lib/src/cryptography/hasher/: mod.rs  sha512.rs
crates/lib/src/cryptography/integration/: age.rs  core.rs  error.rs  mod.rs  test_utils.rs
crates/lib/src/encrypted_value/: data.rs  metadata.rs  mod.rs  value.rs
crates/lib/src/file/: error.rs  mod.rs  saved_parameters.rs  state.rs
crates/lib/src/file/builder/: core.rs  integration_metadata.rs  mod.rs
crates/lib/src/file/format/: adapters.rs  core.rs  mod.rs  test_suite.rs
crates/lib/src/file/format/json/: mock.rs  mod.rs  tests.rs
crates/lib/src/file/format/toml/: mock.rs  mod.rs  tests.rs
crates/lib/src/file/format/yaml/: mock.rs  mod.rs  tests.rs
crates/lib/src/file/map/: decrypt.rs  encrypt.rs  key_path.rs  mock.rs  mod.rs  saved_nonces.rs  state.rs
crates/lib/src/file/map/value/: mod.rs
crates/lib/src/file/metadata/: core.rs  mod.rs  partial_encryption.rs  state.rs
crates/lib/src/file/metadata/integration/: core.rs  mod.rs  unit.rs
crates/lib/src/file/metadata/mac/: decrypted.rs  encrypted_mac.rs  mac_only_encrypted.rs  mod.rs
crates/lib/src/integration/: age.rs  core.rs  error.rs  key_id.rs  mod.rs  test_utils.rs
crates/lib/src/integration/aws_kms/: config.rs  core.rs  key_arn.rs  key_id.rs  private_key.rs
crates/lib/src/rops_file/: builder.rs  core.rs  decrypt.rs  error.rs  key_path.rs  mac.rs  map.rs  metadata.rs  mock.rs  mod.rs  saved_parameters.rs  state.rs  timestamp.rs  tree.rs
crates/lib/src/rops_file/builder/: core.rs  integration_metadata.rs  mod.rs
crates/lib/src/rops_file/format/: adapters.rs  core.rs  map.rs  mod.rs  test_suite.rs  test_utils.rs  yaml.rs
crates/lib/src/rops_file/format/json/: mod.rs  tests.rs
crates/lib/src/rops_file/format/toml/: mod.rs  tests.rs
crates/lib/src/rops_file/format/yaml/: decrypted_map_to_tree.rs  map_to_tree.rs  mock.rs  mod.rs  tests.rs  to_internal_map.rs  transforms.rs
crates/lib/src/rops_file/map/: core.rs  decrypt.rs  encrypt.rs  mock.rs  mod.rs  transforms.rs
crates/lib/src/rops_file/map/value/: variant.rs
crates/lib/src/rops_file/metadata/: age.rs  core.rs  integration.rs  last_modified.rs  mod.rs  state.rs
crates/lib/src/rops_file/metadata/integration/: core.rs  created_at.rs
crates/lib/src/rops_file/tree/: core.rs  error.rs  mock.rs  mod.rs  yaml.rs
crates/lib/src/rops_file/value/: core.rs  encrypted.rs  mod.rs  variant.rs
crates/lib/src/sops_file/: mod.rs
crates/lib/src/test_utils/: display.rs  from_str.rs  mock.rs  mod.rs  yaml.rs
crates/lib/tests/: parity_checks.rs
crates/lib/tests/sops_references/: age_empty_value.yaml  age_empty_value_plaintext.yaml  age_encrypted_regex.yaml  age_encrypted_regex_plaintext.yaml  age_encrypted_suffix.yaml  age_example.yaml  age_mac_only_encrypted.yaml  age_mac_only_encrypted_plaintext.yaml  age_unencrypted_regex.yaml  cache.yaml
crates/rops/: Cargo.toml
crates/rops/src/cryptography/: authorization_tag.rs  data_key.rs  mod.rs  rng_key.rs
crates/rops/src/cryptography/cipher/: core.rs
crates/rops/src/cryptography/hasher/: core.rs  mod.rs
crates/rops/src/cryptography/integration/: age.rs  core.rs  error.rs  mod.rs  test_utils.rs
crates/rops/src/integration/: age.rs  core.rs  error.rs  key_id.rs  mod.rs  test_suite.rs  test_utils.rs
crates/rops/src/integration/aws_kms/: config.rs  core.rs  key_arn.rs  key_id.rs  mod.rs
crates/rops/src/rops_file/: builder.rs  core.rs  key_path.rs  mod.rs  partial_encryption.rs  state.rs  timestamp.rs
crates/rops/src/rops_file/format/: adapter.rs  adapters.rs  core.rs  map.rs  mod.rs  test_utils.rs
crates/rops/src/rops_file/map/: core.rs  encrypt.rs  mock.rs  mod.rs  saved_nonces.rs  state.rs
crates/rops/src/rops_file/metadata/: core.rs  integration.rs  last_modified.rs  mac.rs  mod.rs  partial_encryption.rs  state.rs
crates/rops/src/rops_file/value/: encrypted.rs
crates/rops/src/test_utils/: mod.rs
crates/rops/tests/: parity_checks.rs
crates/rops/tests/sops_references/: age_encrypted_regex.yaml  age_encrypted_regex_plaintext.yaml  age_encrypted_suffix.yaml  age_encrypted_suffix_plaintext.yaml  age_example.yaml  age_example_plaintext.yaml  age_mac_only_encrypted.yaml  age_mac_only_encrypted_plaintext.yaml  age_unencrypted_regex.yaml  age_unencrypted_regex_plaintext.yaml  age_unencrypted_suffix.yaml  age_unencrypted_suffix_plaintext.yaml  aws_kms_example.yaml  aws_kms_example_plaintext.yaml
(+46 files in other folders)
