[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
age = "0.9"
anyhow = "1"
aws-arn = "0.3"
aws-sdk-kms = { version = "1.9", features = ["behavior-version-latest"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
ctrlc = "3"
derive_more = "0.99"
directories = "5"
generic-array = "0.14"
hex = "0.4"
impl-tools = "0.10"
indexmap = "2"
indoc = "2"
once_cell = "1"
pretty_assertions = "1"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
serde_with = "3"
serde_yaml = "0.9"
serde_json = "1"
serial_test = { version = "3", default-features = false }
sha2 = "0.10"
shlex = "1.2.0"
strum = { version = "0.25", features = ["derive"] }
tempfile = "3"
test-binary = "3"
textwrap = "0.16"
tokio = "1"
thiserror = "1"
walkdir = "2"
which = "5"

[patch.crates-io]
# TEMP: https://github.com/str4d/rage/pull/429
age = { git = "https://github.com/gibbz00/rage", branch = "eq_hash" }
