[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
keywords = ["sops", "encryption", "config"]
authors = ["Gabriel Hansson <gabrielhansson00@gmail.com>"]
repository = "https://github.com/gibbz00/rops"
license = "MPL-2.0"
exclude = ["/.github"]
edition = "2021"
readme = "README.md"
version = "0.1.5"

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
age = "0.11"
anyhow = "1"
aws-arn = "0.3"
aws-sdk-kms = { version = "1.90", features = ["behavior-version-latest"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
ctrlc = "3"
derive_more = { version = "2.0", features = ["display", "from", "deref", "deref_mut", "into", "as_ref"] }
directories = "6"
generic-array = "0.14"
hex = "0.4"
impl-tools = "0.10"
indexmap = "2"
indoc = "2"
pretty_assertions = "1"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
serde_with = "3"
serde_yaml = "0.9"
serde_json = "1"
serial_test = { version = "3", default-features = false }
sha2 = "0.10"
shlex = "1.3.0"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
test-binary = "3"
textwrap = "0.16"
thiserror = "2"
tokio = "1"
toml = "0.8"
walkdir = "2"
which = "7"
zeroize = { version = "1.8" }
