[package]
name = "rops-cli"
version = "0.1.0"
edition = "2021"

[features]
test-utils = ["rops/test-utils"]

[dependencies]
rops = { path = "../lib" }

anyhow.workspace = true
clap.workspace = true
console.workspace = true
ctrlc.workspace = true
indexmap.workspace = true
regex.workspace = true
serde.workspace = true
serde_regex.workspace = true
serde_with.workspace = true
shlex.workspace = true
tempfile.workspace = true
thiserror.workspace = true
which.workspace = true

[dev-dependencies]
rops = { path = "../lib", features = ["test-utils"] }

pretty_assertions.workspace = true
serial_test.workspace = true
test-binary.workspace = true
