[package]
name = "rops-cli"
description = "SOPS CLI alternative in pure Rust"
categories = ["cryptography", "command-line-utilities"]
version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
edition.workspace = true

[[bin]]
name = "rops"
path = "src/main.rs"

[features]
test-utils = ["rops/test-utils"]

[dependencies]
rops = { path = "../lib", version = "0" }

anyhow.workspace = true
clap.workspace = true
console.workspace = true
ctrlc.workspace = true
indexmap.workspace = true
regex.workspace = true
serde.workspace = true
serde_regex.workspace = true
serde_with.workspace = true
shlex.workspace = true
tempfile.workspace = true
thiserror.workspace = true
which.workspace = true

[dev-dependencies]
rops = { path = "../lib", features = ["test-utils"] }

pretty_assertions.workspace = true
serial_test.workspace = true
test-binary.workspace = true
