[package]
name = "rops"
version = "0.1.0"
edition = "2021"

[features]
# Integrations:
age = ["dep:age"]
age-test-utils = ["age", "test-utils", "dep:indoc", "dep:textwrap"]
# File formats:
yaml = ["dep:serde_yaml"]
# Ciphers
aes-gcm = ["dep:aes-gcm"]

test-utils = []

[dependencies]
base64.workspace = true
derive_more.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
strum.workspace = true
thiserror.workspace = true

# AGE
age = { workspace = true, features = ["armor"], optional = true }

# AGE && TEST_UTILS
textwrap = { workspace = true, optional = true }
indoc = { workspace = true, optional = true }

# YAML
serde_yaml = { workspace = true, optional = true }

# AES_GCM
aes-gcm = { workspace = true, optional = true }
